@@ -1,0 +1,7 @@
+; Copyright (C) 2016  Internet Systems Consortium, Inc. ("ISC")
+; 
+; This Source Code Form is subject to the terms of the Mozilla Public
+; License, v. 2.0. If a copy of the MPL was not distributed with this
+; file, You can obtain one at http://mozilla.org/MPL/2.0/.
+@	0	SOA	. . 0 0 0 0 0
+@	0	NS	.
