@@ -1,3 +1,6 @@
+4541.	[bug]		rndc addzone should properly reject non master/slave
+			zones. [RT #43665]
+
 4539.	[bug]		Referencing a nonexistant zone with rpz could lead
 			to a assertion failure when configuring. [RT #43787]
 
